--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mfelibs/prerender-html-plugin",
-  "version": "0.0.18",
+  "version": "0.0.21",
   "description": "预加载html插件",
   "main": "./src/index.js",
   "scripts": {
@@ -11,6 +11,20 @@
   "author": "wangchang <wangchang@staff.sina.com.cn>",
   "license": "ISC",
   "dependencies": {
+    "html-minifier": "^3.5.19",
+    "es6-promisify": "^6.0.0",
+    "pend": "^1.2.0",
+    "promise-limit": "^2.5.0",
+    "express": "^4.16.2",
+    "http-proxy-middleware": "^0.18.0",
+    "portfinder": "^1.0.13",
+    "camel-case": "3.0.x",
+    "clean-css": "4.1.x",
+    "commander": "2.16.x",
+    "he": "1.1.x",
+    "param-case": "2.1.x",
+    "relateurl": "0.2.x",
+    "uglify-js": "3.4.x"
   },
   "engines": {
     "node": ">= 8.0.0",
