--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@mfelibs/prerender-html-plugin",
-  "version": "0.0.23",
+  "version": "0.0.27",
   "description": "预加载html插件",
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"mocha\"",
     "dev": "marax dev",
-    "build": "marax lib"
+    "build": "marax lib",
+    "install": "node install.js"
   },
   "author": "wangchang <wangchang@staff.sina.com.cn>",
   "license": "ISC",
