--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mfelibs/prerender-html-plugin",
-  "version": "0.0.27",
+  "name": "prerender-html-plugin",
+  "version": "0.0.31",
   "description": "预加载html插件",
   "main": "./src/index.js",
   "scripts": {
