--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "prerender-html-plugin",
-  "version": "0.0.31",
+  "version": "0.0.33",
   "description": "预加载html插件",
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"mocha\"",
     "dev": "marax dev",
-    "build": "marax lib",
-    "install": "node install.js"
+    "build": "marax lib"
   },
   "author": "wangchang <wangchang@staff.sina.com.cn>",
   "license": "ISC",
